# Dev-cli

./: CHANGELOG.md  Cargo.toml  README.md  cog.toml  devfile.yaml
.github/workflows/: build-release.yml  rust-audit.yml  rust-clippy.yml
src/: config.rs  dev-cli.art  lib.rs  main.rs
src/crd/: Readme.md  dev_work_space.rs
src/devfile/: readme.md
src/devfile/lifecycle/: ask_if_pod_should_up.rs  find_pod_by_ws_name.rs  mod.rs  start_stop.rs  stop.rs  wait_for_status.rs
src/devfile/validator/: readme.md  version.rs
src/shell/: create_attach_process.rs  find_pod_by_ws_name.rs  find_ws_pod_name.rs  mod.rs  readme.md  select_pod.rs  start_it_shell.rs
src/trace/: init.rs  level.rs  mod.rs
src/vscode/: healthcheck.rs  mod.rs  open_code.rs
src/workspaces/: command.rs  get.rs  get_container.rs  list.rs  mod.rs  open_vs_code.rs  restart.rs  shell.rs  toggle.rs
