[package]
name = "dev-cli"
version = "0.2.2"
edition = "2021"
default-run = "dev-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
kube = { version = "0.88.1", features = ["derive", "jsonpatch"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["registry", "time"] }
tracing-logfmt = "0.3.3"
tracing-bunyan-formatter = "0.3"
time = { version = "0.3.34" }
serde = "1.0"
schemars = "0.8"
serde_json = "1.0"
serde_yaml = "0.9"
jsonschema = "0.17.1"
json-patch = "1.2.0"

# Code that handle the CLI
[[bin]]
name = "dev-cli"
path = "src/main.rs"
test = true

# Code for development purpose
[[bin]]
name = "sandbox"
path = "src/bin/sandbox.rs"
test = false
